Change in the About page

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -30,14 +30,12 @@
 						<strong>&copy;opyright</strong>
 						<div itemscope itemtype="http://schema.org/ScholarlyArticle">
 							<address class="mdl-card__supporting-text no-padding">
-								<a href="http://artingo.net" target="_blank">artingo.net</a><br/>
-								<span itemprop="author">Alfred Walther</span><br/>
-								Elisabethenstr. 19<br/>
-								D-61239 Ober-Mörlen, Germany
+								<span itemprop="author">Me</span><br/>
+								Straße 1<br/>
+								10245 Berlin
 							</address>
 							<p></p>
-							<p>Em@il: <a href="mailTo://office@artingo.net">office@artingo.net</a><br/>
-								Skype: <a href="skype:artingo.net?chat">artingo.net</a>
+							<p>Email: <a href="mailTo://test@test.net">test@test.net</a><br/>
 							</p>
 						</div>
 					</div>
