--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,6 +1,6 @@
 .portfolio-header {
   position: relative;
-  background-image: url(../images/header-bg.jpg);
+  background-image: url(../images/whiteBackground.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
