--- a/src/main/resources/templates/mail/en/order-shipped.html
+++ b/src/main/resources/templates/mail/en/order-shipped.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<title>Order Confirmation</title>
+	<title>Confirmation of shipment</title>
 </head>
 <body>
 
 <p>Hello <span th:text="${kunde.nameFormatiert}"/>,<br/>
 	<br/>
-	Your order number <span th:text="${bestellung.id}"/> has been received.
+	Your order number <span th:text="${bestellung.id}"/> has been sent.
 </p>
 
 <p>The delivery includes the following items:<br/>
