--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title th:text="#{nav.about}"></title>
+	<title th:text="#{nav.help}"></title>
 	<link th:replace="fragments/styles"/>
 </head>
 
@@ -14,13 +14,13 @@
 
 			<div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
 				<div class="mdl-card__title">
-					<h2 class="mdl-card__title-text" th:text="#{nav.about}"></h2>
+					<h2 class="mdl-card__title-text" th:text="#{nav.help}"></h2>
 				</div>
 
 				<div class="mdl-grid portfolio-copy">
-					<h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline" th:text="#{about.title}"></h3>
+					<h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline" th:text="#{help.title}"></h3>
 					<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-						<p th:utext="#{'about.p1'}"></p>
+						<p th:utext="#{'help.p1'}"></p>
 					</div>
 
 					<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
