--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <footer class="mdl-mini-footer" xmlns:th="http://www.thymeleaf.org">
     <div class="mdl-mini-footer__left-section">
         <div class="mdl-logo">
-	        <a href="#" th:text="#{footer.title}"></a>
+	        <a href="/index.html" th:text="#{footer.title}"></a>
         </div>
     </div>
     <div class="mdl-mini-footer__right-section">
