--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -22,6 +22,14 @@
 					<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
 						<p th:utext="#{'about.p1'}"></p>
 					</div>
+					<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+						<p>
+							<strong>Header-Background Source:</strong><br/>
+							<a href='https://www.my-cups.de/'>Header-Background sourced from Newsletter section of - www.my-cupds.de</a><br/>
+							<strong>Background Source:</strong><br/>
+							<a href='https://www.freepik.com/photos/background'>Background photo created by tirachard - www.freepik.com</a><br/>
+						</p>
+					</div>
 
 					<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
 						<strong>&copy;opyright</strong>
