Adapted EN and DE email templates for the fresh tea shop

--- a/src/main/resources/templates/mail/de/customer-changed.html
+++ b/src/main/resources/templates/mail/de/customer-changed.html
@@ -22,11 +22,11 @@
 	<span th:text="#{${kunde.zahlungsart.messageKey}}"/>
 </p>
 
-<p>Falls Sie diese Änderung <u>NICHT</u> selber durchgeführt haben,
-	wenden Sie sich bitte an unseren Kunden-Support: <a href="mailto:support@kt-shop.de">support@kt-shop.de</a>
+<p>Falls Sie diese Änderung <u>NICHT</u> selbst durchgeführt haben,
+	wenden Sie sich bitte an unseren Kunden-Support: <a href="mailto:test@test.net">test@test.net</a>
 </p>
 
 Mit freundlichen Grüßen,<br/>
-Ihr kt-Shop-Team
+Ihr Fresh Tea Shop-Team
 </body>
 </html>
