--- a/src/main/resources/templates/mail/en/customer-changed.html
+++ b/src/main/resources/templates/mail/en/customer-changed.html
@@ -23,10 +23,10 @@
 </p>
 
 <p>If you have <u>NOT</u> made this change yourself, please contact our customer support:
-   <a href="mailto:support@kt-shop.de">support@kt-shop.de</a>
+   <a href="mailto:test@test.net">test@test.net</a>
 </p>
 
 Best regards<br/>
-Your kt-Shop team
+Your Fresh Tea Shop team
 </body>
 </html>
