--- a/src/main/resources/templates/mail/en/order-shipped.html
+++ b/src/main/resources/templates/mail/en/order-shipped.html
@@ -23,7 +23,7 @@
 </p>
 <p>No more changes can be made to your order as it is already being shipped.</p>
 
-<p>Your order should arrive within the next 3 working days.<br/>
+<p>Your order should arrive within the next 5 working days.<br/>
 	Sent to the following address:<br/>
 	<span th:text="${kunde.nameFormatiert}"/><br/>
 	<span th:text="${kunde.strasse}"/><br/>
@@ -35,6 +35,6 @@
 </p>
 
 Best regards,<br/>
-your Demo-Shop team
+Your Fresh Tea Shop team
 </body>
 </html>
