--- a/src/main/resources/templates/mail/de/order-receipt.html
+++ b/src/main/resources/templates/mail/de/order-receipt.html
@@ -31,6 +31,6 @@ Gesamtpreis: <span th:text="${bestellung.gesamtpreis}"/><br/>
 </p>
 
 Mit freundlichen Grüßen,<br/>
-Ihr kt-Shop-Team
+Ihr Fresh Tea Shop-Team
 </body>
 </html>
