--- a/src/main/resources/templates/mail/de/order-shipped.html
+++ b/src/main/resources/templates/mail/de/order-shipped.html
@@ -22,7 +22,7 @@
 </p>
 <p>Es kann keine Änderung mehr an Ihrer Bestellung vorgenommen werden, da sie	sich bereits im Versand befindet</p>
 
-<p>Ihre Bestellung sollte in den nächsten 3 Werktage bei Ihnen ankommen.<br/>
+<p>Ihre Bestellung sollte in den nächsten 5 Werktagen bei Ihnen ankommen.<br/>
 	Versendet wurde an folgende Adresse:<br/>
 	<span th:text="${kunde.nameFormatiert}"/><br/>
 	<span th:text="${kunde.strasse}"/><br/>
@@ -34,6 +34,6 @@
 </p>
 
 Mit freundlichen Grüßen,<br/>
-Ihr kt-Shop-Team
+Ihr Fresh Tea Shop-Team
 </body>
 </html>
